@@ -44,6 +44,4 @@ GnomeUIInfo * gnome2perl_svrv_to_uiinfo_tree (SV* sv, char * name);
 void gnome2perl_refill_infos (SV *data, GnomeUIInfo *infos);
 void gnome2perl_refill_infos_popup (SV *data, GnomeUIInfo *info);
 
-char **SvGnomeCharArray (SV *ref);
-
 #endif /* _GNOME2PERL_H_ */
