@@ -20,34 +20,6 @@
 
 #include "gnome2perl.h"
 
-/* ------------------------------------------------------------------------- */
-
-char **SvGnomeCharArray (SV *ref)
-{
-	char **result = NULL;
-
-	if (SvOK (ref))
-		if (SvRV (ref) && SvTYPE (SvRV (ref)) == SVt_PVAV) {
-			AV *array = (AV *) SvRV (ref);
-			SV **string;
-
-			int i, length = av_len (array);
-			result = g_new0 (char *, length + 2);
-
-			for (i = 0; i <= length; i++)
-				if ((string = av_fetch (array, i, 0)) && SvOK (*string))
-					result[i] = SvPV_nolen (*string);
-
-			result[length + 1] = NULL;
-		}
-		else
-			croak ("the environment parameter must be an array reference");
-
-	return result;
-}
-
-/* ------------------------------------------------------------------------- */
-
 MODULE = Gnome2::Help	PACKAGE = Gnome2::Help	PREFIX = gnome_help_
 
 ##  gboolean gnome_help_display (const char *file_name, const char *link_id, GError **error) 
@@ -137,7 +109,7 @@ gnome_help_display_desktop_with_env (class, program, doc_id, file_name, link_id,
 	char **envp;
 	GError *error = NULL;
     CODE:
-	envp = SvGnomeCharArray (env_ref);
+	envp = SvEnvArray (env_ref);
 
 	RETVAL = gnome_help_display_desktop_with_env (program, doc_id, file_name, link_id, envp, &error);
 	if (!RETVAL)
